# sandarb.ai

./: .dockerignore  .env.enterprise.example  .env.example  .env.production.example  .gcloudignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  LEARNING.md  LICENSE  README.md  docker-compose.yml  instrumentation.ts  middleware.ts  next.config.js  package-lock.json  package.json  requirements-seed.txt  tailwind.config.ts  vitest.config.ts
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
backend/: README.md  auth.py  config.py  db.py  main.py  mcp_server.py  requirements.txt  write_auth.py
clickhouse-cluster/: config.xml  docker-compose.yml
components/: agp-icon.tsx  app-shell.tsx  compliance-metadata-fields.tsx  content-diff-view.tsx  context-card.tsx  context-editor.tsx  context-preview.tsx  data-pipeline-diagram.tsx  empty-state.tsx  header.tsx  info-bubble.tsx  load-sample-data.tsx  mermaid-diagram.tsx  multi-agent-a2a-diagram.tsx  notification-feed.tsx  public-header.tsx  sidebar.tsx  signed-in-strip.tsx  stats-card.tsx  text-diff-view.tsx  theme-sync.tsx  user-menu.tsx
config/: cloudbuild-backend.yaml  cloudbuild-consumer.yaml  cloudbuild-superset.yaml  sql-policy.yaml
docs/: DATA_PLATFORM.md  DEPLOYMENT.md  HYBRID_ARCHITECTURE_ANALYSIS.md  QUICKSTART.md  SECURITY.md  deploy-gcp.md  developer-guide.md
k8s/: clickhouse-configmap.yaml  clickhouse-internal-lb.yaml  (+9 more)
sdk/python/: README.md  pyproject.toml  sandarb_client.py
sdk/python/examples/: async_example.py  basic_usage.py  decorators_example.py  langchain_example.py  openai_example.py
sdk/python/sandarb/: __init__.py  async_client.py  client.py  decorators.py  models.py
sdk/python/sandarb/integrations/: __init__.py  anthropic.py  base.py  langchain.py  openai.py
(+288 files in other folders)
