[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandarb"
version = "0.1.0"
description = "Sandarb AI Governance SDK - Govern your AI agents with ease"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sandarb AI", email = "sdk@sandarb.ai"}
]
keywords = ["ai", "governance", "agents", "llm", "safety", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
async = ["httpx>=0.27.0"]
langchain = ["langchain-core>=0.1.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
all = [
    "httpx>=0.27.0",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://sandarb.ai"
Documentation = "https://docs.sandarb.ai"
Repository = "https://github.com/sandarb-ai/sandarb"
Issues = "https://github.com/sandarb-ai/sandarb/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sandarb*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
